--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,7 @@
 body{
-    font-family: sans-serif,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-family: "DM Sans", sans-serif; */
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
     line-height: 20px;
 }
 html{
@@ -31,11 +33,14 @@ a{
     text-align: center;
     gap: 1.8rem;
     margin: 20px 20px 40px;
+    
+    
 }
 
 .title {
     font-size: 2.2rem;
     word-spacing: 2px;
+    font-weight: 600;
 }
 
 .subtitle {
